--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "denisok94/admin",
     "type": "yii2-extension",
-    "description": "Yii2 extension.",
-    "keywords": ["yii2", "yii2-admin-bar", "yii2-admin"],
+    "description": " ",
+    "keywords": [""],
     "license": "BSD-3-Clause",
     "support": {
         "issues": "https://github.com/Denisok94/admin/issues",
@@ -12,6 +12,9 @@
         "name": "Denisok94",
         "email": "denisok94@inbox.ru"
     }],
+    "require": {
+        "yiisoft/yii2-authclient": "^2.2"
+    },
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
@@ -20,7 +23,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "v0.1"
+            "dev-master": "v0.1.1"
         }
     }
 }
