--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,5 @@
             "denisok94\\admin\\": ""
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "v0.1.1"
-        }
-    }
+    "version": "0.1.1"
 }
