--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "issues": "https://github.com/Denisok94/admin/issues",
         "source": "https://github.com/Denisok94/"
     },
-    "version": "0.1.2",
+    "version": "0.1.2-alpha",
     "authors": [{
         "name": "Denisok94",
         "email": "denisok94@inbox.ru"
