--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,15 @@
         "issues": "https://github.com/Denisok94/admin/issues",
         "source": "https://github.com/Denisok94/"
     },
-    "version": "0.1.2-alpha",
+    "version": "v0.1.3-alpha",
     "authors": [{
         "name": "Denisok94",
         "email": "denisok94@inbox.ru"
     }],
     "require": {
-        "yiisoft/yii2-authclient": "^2.2"
+        "yiisoft/yii2-authclient": "^2.2",
+        "denisok94/helper": "^0.5"
     },
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "denisok94\\admin\\": ""
